--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-/*   .attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); } */
 html {
   font-size: 62.5%;
   box-sizing: border-box; }
@@ -245,6 +243,15 @@ html {
     .foot-soc__list-item {
       list-style: none; }
 
+/* Attributiom */
+.attribution {
+  font-size: 11px;
+  text-align: center; }
+
+.attribution a {
+  color: #3e52a3; }
+
+/* Media queries */
 @media only screen and (max-width: 1550px) {
   html {
     font-size: 55%; } }
