--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,3 @@
-/*   .attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); } */
-
 // CSS properties
 
 //  Primary
@@ -377,6 +374,20 @@ html {
   }
 }
 
+/* Attributiom */
+
+.attribution {
+  font-size: 11px;
+  text-align: center;
+}
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
+
+////////////////////////////
+/* Media queries */
+////////////////////////////
+
 @media only screen and (max-width: 1550px) {
   html {
     font-size: 55%;
@@ -539,7 +550,9 @@ html {
   }
 }
 
+//////////////////////////////////////////////////
 /* Javascript trigger classes */
+////////////////////////////////////////////////////
 
 .preload * {
   transition: none !important;
